--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2018"
 [dependencies]
 rand = "0.8.3"
 clap = { version = "3.0.0-beta.2", features = ["yaml"] }
+serde = "1.0.117"
+serde_json = "1.0.59"
+serde_derive = "1.0.117"
