First attempt to write new entries via file IO with the add subcommand

--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -33,6 +33,7 @@ subcommands:
             - listname:
                 help: The name of the list
                 index: 1
+                required: true
                 takes_value: true
                 possible_values: [ todo, active, done ]
     - assign:
