--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ clap = { version = "3.0.0-beta.2", features = ["yaml"] }
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+prettytable-rs = "0.8"
